<?xml version="1.0"?>
<package>
  <name>adas_common</name>
  <version>0.0.1</version>
  <description>Common utility libraries used throughout the project.</description>

  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
