<?xml version="1.0"?>
<package>
  <name>adas_filters</name>
  <version>0.0.1</version>
  <description>Discrete filtering library used for the project.</description>

  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>adas_common</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>adas_common</run_depend>

</package>
