<?xml version="1.0"?>
<package>
  <name>car_visualizer</name>
  <version>0.0.1</version>
  <description>RViz visualization marker publisher for cars.</description>

  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>adas_common</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>adas_common</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
